<resources>
    <string name="app_name">"Multiconversor "</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_principalmulticonversor">Multiconversor</string>

    //
    <string name="temperatura">Coversor de temperatura</string>
    <string name="longitud">Conversor longitudes</string>
    <string name="calculadora">Usar Calculadora</string>
    <string name="divisas">Conversor de divisas</string>
    <string name="bienvenido">Bienvenido a nuestra aplicacion!</string>

    //

    <string name="title_activity_calculadora">calculadora</string>
    <string name="sumar">+</string>
    <string name="resta">-</string>
    <string name="multiplicacion">*</string>
    <string name="division">/</string>
    <string name="title_activity_temperatura">temperatura</string>
    <string name="title_activity_longitud">longitud</string>
    <string name="title_activity_divisas">divisas</string>

    //

    <string name="temperaturatxt">Ingrese la temperatura</string>
    <string name="editxt">temperatura</string>
    <string name="opciones">Seleccione la conversion que desea</string>
    <string name="Resultado">Resultado</string>


</resources>
