<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".Menu"
    android:background="@mipmap/fondoplaya">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/bienvenido"
        android:id="@+id/textView"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="15dp"
        android:textStyle="bold|italic"
        android:textColor="#fbf7ff" />

    <Button
        android:id="@+id/bcalculadora"
        android:text="@string/calculadora"
        android:drawableLeft="@mipmap/ic_calculadora"
        android:drawablePadding="5dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="25dp"
        android:textStyle="bold|italic"
        android:textColor="#fbf7ff" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/divisas"
        android:id="@+id/bmoneda"
        android:drawableLeft="@mipmap/ic_moneda"
        android:drawablePadding="5dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:textStyle="bold|italic"
        android:textSize="20sp"
        android:layout_below="@+id/bcalculadora"
        android:textColor="#fbf7ff" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/longitud"
        android:id="@+id/blongitud"
        android:drawableLeft="@mipmap/ic_longitud"
        android:drawablePadding="5dp"
        android:layout_below="@+id/bmoneda"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:textStyle="bold|italic"
        android:textSize="20sp"
        android:textColor="#fbf7ff" />

    <Button
        android:id="@+id/btemperatura"
        android:text="@string/temperatura"
        android:drawableLeft="@mipmap/ic_temperatura"
        android:drawablePadding="5dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:textStyle="bold|italic"
        android:textSize="20sp"
        android:layout_below="@+id/blongitud"
        android:layout_centerHorizontal="true"
        android:textColor="#fbf7ff" />


</RelativeLayout>